# ci40-provision-daemon

./: .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
luci-mod-provisioning/: CMakeLists.txt
luci-mod-provisioning/luasrc/controller/creator/: provisioning.lua  rpc_provisioning.lua
luci-mod-provisioning/luasrc/jsonrpcbind/creator/: provisioning.lua
luci-mod-provisioning/luasrc/view/creator_provisioning/: clicker_list.htm  provisioning.htm
luci-mod-provisioning/resources/creator/css/: provisioning.css
misc/: Makefile
provisioning-daemon/: CMakeLists.txt
provisioning-daemon/files/: CMakeLists.txt
provisioning-daemon/files/etc/config/: provisioning_daemon
provisioning-daemon/src/: CMakeLists.txt  buttons.c  buttons.h  clicker.c  clicker.h  clicker_sm.c  clicker_sm.h  commands.h  connection_manager.c  connection_manager.h  controls.c  controls.h  errors.h  event.c  event.h  led.c  led.h  log.h  processing_queue.c  processing_queue.h  provision_history.c  provision_history.h  provisioning_daemon.c  provisioning_daemon.h  ubus_agent.c  ubus_agent.h  utils.c  utils.h
provisioning-daemon/src/crypto/: CMakeLists.txt  bigint.c  bigint.h  crypto_config.c  crypto_config.h  diffie_hellman_keys_exchanger.c  diffie_hellman_keys_exchanger.h  encoder.c  encoder.h  rijndael.h
usr/: CMakeLists.txt
usr/lib/lua/creator/: provisioning.lua
